# codebuilder

./: AUTHORS  ChangeLog  MANIFEST.in  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
codebuilder/: settings.py  urls.py
codebuilder/api/: urls.py
codebuilder/api/accounts/: __init__.py  urls.py  views.py
codebuilder/db/: database.py  exception.py  models.py
codebuilder/db/migration/: alembic.ini  cli.py
codebuilder/db/migration/alembic_migrations/: env.py
codebuilder/db/migration/alembic_migrations/versions/: 4f9185093cd6_add_namespace.py  HEADS  d359aeaffc57_.py  f773309b2ee4_init.py
codebuilder/utils/: django_settings.py  logsetting.py  settings.py  util.py
tools/: check_unit_test_structure.sh  clean.sh
