[metadata]
name = codebuilder
summary = API's and implementations to support code building from micro service.
description-file = README.rst
author = xiaodongwang
author-email = xiaodongwang991481@gmail.com
home-page = http://docs.openstack.org/developer/networking-sfc/
classifier =
    Environment :: Django
    Intended Audience :: Information Technology
    Intended Audience :: Developer
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    codebuilder

[entry_points]
console_scripts =
    codebuilder_manage = codebuilder.bin.manage:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_sfc/locale
domain = networking-sfc

[update_catalog]
domain = codebuilder
output_dir = codebuilder/locale
input_file = codebuilder/locale/codebuilder.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = codebuilder/locale/codebuilder.pot
